# parachain

./: .gitignore  README.md  audit-report.md
docs/: real_world_scenario.md  technical-docs-mobile.md  technical-docs-model.md  technical-docs-parachain.md  technical-docs-web-interface.md
ml-behavioral-biometrics/: readme.md
ml-behavioral-biometrics/app/: __init__.py  main.py  models.py
ml-behavioral-biometrics/app/routes/: health.py
ml-behavioral-biometrics/data/: readme.md
ml-behavioral-biometrics/docker/: .dockerignore  docker-compose.yml  prometheus.yml
ml-behavioral-biometrics/docs/: MODEL.md
ml-behavioral-biometrics/ml/: inference.py  model.py  utils.py
ml-behavioral-biometrics/scripts/: collect_behavioral_data.py  export_model.py  jsonl_to_csv.py  train_model.py
ml-behavioral-biometrics/tests/: test_api.py  test_preprocessing.py
ml-model/: .env.example  .gitignore  readme.md  requirements.txt
ml-model/app/: config.py
ml-model/app/routes/: __init__.py  inference.py
ml-model/data/: workflow.md
ml-model/docker/: Dockerfile
ml-model/docs/: API.md  DEPLOYMENT.md
ml-model/ml/: __init__.py  preprocessing.py  train.py
ml-model/scripts/: evaluate_model.py  generate_synthetic.py
ml-model/tests/: __init__.py  test_model.py
mobile/: .env  .gitignore  README.md  package-lock.json  package.json
mobile/android/app/: build.gradle
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx  modal.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  recovery.tsx  register.tsx
mobile/app/(wallet)/: _layout.tsx  index.tsx
mobile/app/(wallet)/credentials/: [id].tsx  _layout.tsx  index.tsx  qr.tsx  share.tsx
mobile/app/(wallet)/identity/: [id].tsx  _layout.tsx  create.tsx  index.tsx  manage.tsx
mobile/app/(wallet)/proof/: _layout.tsx  confirm.tsx  history.tsx  index.tsx
mobile/app/(wallet)/settings/: _layout.tsx  backup.tsx  biometric.tsx  index.tsx
mobile/ios/: .gitignore  ZKProverModule.m  ZKProverModule.swift  ZKProverModuleTests.swift
mobile/modules/zk-prover-expo-plugin/: app.plugin.js
mobile/rust-prover/: Cargo.toml
mobile/rust-prover/scripts/: generate_keys.rs  run_keygen.sh
mobile/rust-prover/src/: ffi.rs  lib.rs
mobile/rust-prover/src/circuits/: age_verification.rs  common.rs  custom.rs  employment_status.rs  mod.rs  student_status.rs  vaccination_status.rs
mobile/rust-prover/src/guests/: age_verification.rs  custom.rs  employment_status.rs  personhood.rs  student_status.rs  vaccination_status.rs
mobile/rust-prover/src/proving/: mod.rs
mobile/rust-prover/tests/: integration_test.rs
mobile/scripts/: build-rust-android.sh  build-rust-ios.sh  test-ios-bridge.sh
mobile/src/components/common/: Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Modal.tsx
mobile/src/components/credential/: CredentialCard.tsx  FieldSelector.tsx  ProofPreview.tsx
mobile/src/components/identity/: DIDDisplay.tsx  IdentityCard.tsx  KeyPairManager.tsx
mobile/src/components/layout/: Header.tsx  SafeAreaView.tsx  TabBar.tsx
mobile/src/config/: env.ts  substrate.ts
mobile/src/hooks/: useAuth.ts  useBiometric.ts  useCredentials.ts  useNavigation.ts  useSubstrate.ts
mobile/src/services/crypto/: keyManagement.ts  provingKeys.ts  signature.ts  zk.ts
mobile/src/services/qr/: qrGenerator.ts  qrScanner.ts
mobile/src/services/storage/: biometric.ts  localStorage.ts  secureStorage.ts
mobile/src/services/substrate/: api.ts  calls.ts  queries.ts
mobile/src/store/: authStore.ts  credentialStore.ts  identityStore.ts  index.ts  uiStore.ts
mobile/src/styles/: colors.ts  spacing.ts  theme.ts  typography.ts
mobile/src/substrate/: types.ts  utils.ts
mobile/src/types/: api.ts  credential.ts  identity.ts  index.ts  substrate.ts
mobile/src/utils/: constants.ts  errors.ts  formatting.ts  substrate.ts  validation.ts
mobile/src/zk/: index.ts  prover.ts  types.ts  useProof.ts
parachain/: Cargo.toml  chain_spec.json  rust-toolchain.toml
parachain/node/: Cargo.toml
parachain/node/src/: chain_spec.rs
parachain/pallets/pallet-credential-governance/: Cargo.toml
parachain/pallets/pallet-credential-governance/src/: benchmarking.rs  lib.rs  weights.rs
parachain/pallets/pallet-identity-registry/: Cargo.toml
parachain/pallets/pallet-identity-registry/src/: benchmarking.rs  lib.rs  weights.rs
parachain/pallets/pallet-proof-of-personhood/: Cargo.toml
parachain/pallets/pallet-proof-of-personhood/src/: benchmarking.rs  lib.rs  weights.rs
parachain/pallets/pallet-verifiable-credentials/: Cargo.toml
parachain/pallets/pallet-verifiable-credentials/src/: benchmarking.rs  lib.rs  weights.rs
parachain/pallets/pallet-verifiable-crendentials/: Cargo.toml
parachain/pallets/pallet-verifiable-crendentials/src/: lib.rs  tests.rs
parachain/pallets/pallet-xcm-credentials/: Cargo.toml
parachain/pallets/pallet-xcm-credentials/src/: benchmarking.rs  lib.rs  weights.rs
parachain/pallets/pallet-zk-credentials/: Cargo.toml
parachain/pallets/pallet-zk-credentials/src/: benchmarking.rs  lib.rs  weights.rs
parachain/pallets/pallet-zk-credentials/src/guests/: age_verification.rs  custom.rs  employment_status.rs  personhood.rs  student_status.rs  vaccination_status.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
parachain/runtime/src/configs/: mod.rs  xcm_config.rs
parachain/tests/: integration_tests.rs
web-interface/: package-lock.json  package.json
web-interface/src/: App.tsx
web-interface/src/components/displays/: CredentialCard.tsx  ProposalCard.tsx  StatsCard.tsx  TimelineComponent.tsx
web-interface/src/components/forms/: IssueCredentialForm.tsx  ProposalForm.tsx  (+2 more)
web-interface/src/hooks/: useApi.ts  useAuth.ts  useCredentials.ts  useGovernance.ts  usePolling.ts
web-interface/src/store/: authStore.ts  credentialStore.ts  governanceStore.ts  uiStore.ts
web-interface/src/styles/: animations.css  global.css  theme.css
web-interface/src/types/: api.ts  credential.ts  governance.ts  index.ts
web-interface/src/utils/: errors.ts  formatting.ts  substrate.ts  validation.ts
(+36 files in other folders)
