[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
default-members = [
    "pallets/pallet-credential-governance",
    "pallets/pallet-identity-registry",
    "pallets/pallet-verifiable-credentials",
    "pallets/pallet-xcm-credentials",
    "pallets/pallet-zk-credentials",
    "runtime"
]
members = [
    "node",
    "pallets/pallet-credential-governance",
    "pallets/pallet-identity-registry",
    "pallets/pallet-verifiable-credentials",
    "pallets/pallet-xcm-credentials",
    "pallets/pallet-zk-credentials",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
# Local pallets and runtime
parachain-template-runtime = { path = "./runtime", default-features = false }
pallet-credential-governance = { path = "./pallets/pallet-credential-governance", default-features = false }
pallet-identity-registry = { path = "./pallets/pallet-identity-registry", default-features = false }
pallet-verifiable-credentials = { path = "./pallets/pallet-verifiable-credentials", default-features = false }
pallet-xcm-credentials = { path = "./pallets/pallet-xcm-credentials", default-features = false }
pallet-zk-credentials = { path = "./pallets/pallet-zk-credentials", default-features = false }

# FRAME and Substrate primitives
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-support", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-system", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-executive", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-benchmarking", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-system-benchmarking", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-system-rpc-runtime-api", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "frame-try-runtime", default-features = false }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-core", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-std" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-io" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-api" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-block-builder" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-inherents" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-offchain" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-session" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-transaction-pool" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-version" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "sp-runtime" }

# Standard pallets
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "pallet-balances" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "pallet-sudo" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "pallet-timestamp" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "pallet-transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.19.5", package = "pallet-transaction-payment-rpc-runtime-api" }

xcm = { version = "15.0.1", package = "staging-xcm", default-features = false }
xcm-builder = { version = "18.0.1", package = "staging-xcm-builder", default-features = false }
xcm-executor = {version = "18.0.1", package = "staging-xcm-executor", default-features = false }
pallet-xcm = { version = "18.0.0", default-features = false }

clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "2503.0.1", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
panic = "abort"