[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
default-members = [
    "pallets/pallet-credential-governance",
    "pallets/pallet-identity-registry",
    "pallets/pallet-verifiable-credentials",
    "pallets/pallet-xcm-credentials",
    "pallets/pallet-zk-credentials",
    "pallets/pallet-proof-of-personhood",
    "runtime"
]
members = [
    "node",
    "pallets/pallet-credential-governance",
    "pallets/pallet-identity-registry",
    "pallets/pallet-verifiable-credentials",
    "pallets/pallet-xcm-credentials",
    "pallets/pallet-zk-credentials",
    "pallets/pallet-proof-of-personhood",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
# Local pallets and runtime
parachain-template-runtime = { path = "./runtime", default-features = false }
pallet-credential-governance = { path = "./pallets/pallet-credential-governance", default-features = false }
pallet-identity-registry = { path = "./pallets/pallet-identity-registry", default-features = false }
pallet-verifiable-credentials = { path = "./pallets/pallet-verifiable-credentials", default-features = false }
pallet-xcm-credentials = { path = "./pallets/pallet-xcm-credentials", default-features = false }
pallet-zk-credentials = { path = "./pallets/pallet-zk-credentials", default-features = false }
pallet-proof-of-personhood = { path = "./pallets/pallet-proof-of-personhood", default-features = false }

polkadot-sdk = { version = "2509.0.0", default-features = false }

# FRAME and Substrate primitives
frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.1", default-features = false }
frame-executive = { version = "43.0.1", default-features = false }
frame-benchmarking = { version = "43.0.0", default-features = false }
frame-system-benchmarking = { version = "43.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "39.0.0", default-features = false }
frame-try-runtime = { version = "0.49.0", default-features = false }

sp-core = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "43.0.0", default-features = false, features = ["sp-trie"] }
sp-api = { version = "39.0.0", default-features = false }
sp-block-builder = { version = "39.0.0", default-features = false }
sp-inherents = { version = "39.0.0", default-features = false }
sp-offchain = { version = "39.0.0", default-features = false }
sp-session = { version = "41.0.0", default-features = false }
sp-transaction-pool = { version = "39.0.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }

# Standard pallets
pallet-balances = { version = "44.0.0", default-features = false }
pallet-sudo = { version = "43.0.0", default-features = false }
pallet-timestamp = { version = "42.0.0", default-features = false }
pallet-transaction-payment = { version = "43.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "43.0.0", default-features = false }

# XCM - Consistent versions
xcm = { version = "19.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "23.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "22.0.0", package = "staging-xcm-executor", default-features = false }
pallet-xcm = { version = "23.0.0", default-features = false }

# Cumulus
cumulus-pallet-parachain-system = { version = "0.23.1", default-features = false }
cumulus-primitives-core = { version = "0.21.0", default-features = false }

# Common dependencies
clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.4.1" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.26.0" }
log = { version = "0.4.22", default-features = false }
prometheus-endpoint = { version = "0.17.2", package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false, features = ["derive", "alloc"] }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec", features = ["derive"] }
hex-literal = { version = "1.1.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "29.0.0", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
panic = "abort"