[package]
name = "rust_prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "prover"
crate-type = ["cdylib", "staticlib"]  # cdylib for JNI, staticlib for iOS
# Enable LTO and opt-level in release profile later for smaller sizes

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.5"
# zk dependencies here (arkworks)
# ark-std, ark-groth16, ark-ff, ark-relations

[features]
default = []
