[package]
name = "rust_prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "prover"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"

# JNI support
jni = { version = "0.21", optional = true }

[features]
default = []
android = ["jni"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
