[package]
name = "rust_prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "prover"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sp1-sdk = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
blake2 = "0.10"
serde_json = "1.0"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
sp1-build = "1.2.0"

# JNI support
jni = { version = "0.21", optional = true }

[features]
default = []
android = ["jni"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "generate_keys"
path = "scripts/generate_keys.rs"