[package]
name = "parachain-template-node"
description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
pallet-credential-governance.workspace = true
pallet-identity-registry.workspace = true
pallet-verifiable-credentials.workspace = true
pallet-xcm-credentials.workspace = true
pallet-zk-credentials.workspace = true
polkadot-sdk = { workspace = true, features = ["node"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"pallet-identity-registry/std",
    "pallet-verifiable-credentials/std",
    "pallet-zk-credentials/std",
    "pallet-credential-governance/std",
    "pallet-xcm-credentials/std",
    "polkadot-sdk/std",
]
runtime-benchmarks = [
	"pallet-credential-governance/runtime-benchmarks",
    "pallet-identity-registry/runtime-benchmarks",
    "pallet-verifiable-credentials/runtime-benchmarks",
    "pallet-xcm-credentials/runtime-benchmarks",
    "pallet-zk-credentials/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"pallet-credential-governance/try-runtime",
    "pallet-identity-registry/try-runtime",
    "pallet-verifiable-credentials/try-runtime",
    "pallet-xcm-credentials/try-runtime",
    "pallet-zk-credentials/try-runtime",
    "polkadot-sdk/try-runtime",
]
