[package]
name = "parachain-runtime"
description = "Identity Parachain Runtime"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
docify = { workspace = true }
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
docify = { workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
pallet-credential-governance = { workspace = true }
pallet-identity-registry = { workspace = true }
pallet-verifiable-credentials = { workspace = true }
pallet-xcm-credentials = { workspace = true, default-features = false }
pallet-proof-of-personhood = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
pallet-xcm = { workspace = true, default-features = false }
pallet-zk-credentials = { workspace = true, default-features = false }
polkadot-sdk = { workspace = true, features = [
    "pallet-utility", 
    "cumulus-pallet-aura-ext", 
    "cumulus-pallet-session-benchmarking", 
    "cumulus-pallet-weight-reclaim", 
    "cumulus-pallet-xcm", 
    "cumulus-pallet-xcmp-queue", 
    "cumulus-primitives-aura", 
    "cumulus-primitives-core", 
    "cumulus-primitives-utility", 
    "pallet-aura", 
    "pallet-authorship", 
    "pallet-balances", 
    "pallet-collator-selection", 
    "pallet-message-queue", 
    "pallet-session", 
    "pallet-sudo", 
    "pallet-timestamp", 
    "pallet-transaction-payment", 
    "pallet-transaction-payment-rpc-runtime-api", 
    "pallet-xcm", 
    "parachains-common", 
    "polkadot-parachain-primitives", 
    "polkadot-runtime-common", 
    "runtime", 
    "staging-parachain-info", 
    "staging-xcm", 
    "staging-xcm-builder", 
    "staging-xcm-executor"
], default-features = false }
scale-info = { features = ["derive"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
smallvec = { workspace = true, default-features = true }
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-balances = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "cumulus-pallet-parachain-system/std",
    "log/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "serde_json/std",
    "substrate-wasm-builder",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-identity-registry/std",
    "pallet-verifiable-credentials/std",
    "pallet-zk-credentials/std",
    "pallet-credential-governance/std",
    "pallet-xcm-credentials/std",
    "pallet-proof-of-personhood/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "pallet-xcm/std"
]

runtime-benchmarks = [
    "cumulus-pallet-parachain-system/runtime-benchmarks",
    "hex-literal",
    "pallet-credential-governance/runtime-benchmarks",
    "pallet-identity-registry/runtime-benchmarks",
    "pallet-verifiable-credentials/runtime-benchmarks",
    "pallet-xcm-credentials/runtime-benchmarks",
    "pallet-zk-credentials/runtime-benchmarks",
    "pallet-proof-of-personhood/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "cumulus-pallet-parachain-system/try-runtime",
    "pallet-credential-governance/try-runtime",
    "pallet-identity-registry/try-runtime",
    "pallet-verifiable-credentials/try-runtime",
    "pallet-xcm-credentials/try-runtime",
    "pallet-zk-credentials/try-runtime",
    "pallet-proof-of-personhood/try-runtime",
    "polkadot-sdk/try-runtime",
    "frame-executive/try-runtime",
    "frame-try-runtime/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
on-chain-release-build = ["metadata-hash"]