[package]
name = "pallet-proof-of-personhood"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
sp-std = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
pallet-identity-registry = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-identity-registry/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]