[package]
name = "pallet-proof-of-personhood"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
sp-std = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false, features = ["sp-trie"] }
sp-runtime = { workspace = true }
sp-trie = { version = "41.1.0", default-features = false }
sp-state-machine = { version = "0.28.0", default-features = false }
trie-db = { version = "0.30.0", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
memory-db = { version = "0.34.0", default-features = false }
itertools = { version = "0.14.0", default-features = false }
pallet-identity-registry = { workspace = true, default-features = false }
pallet-zk-credentials = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
p384 = { version = "0.13.1", default-features = false, features = ["ecdsa", "alloc"] }
signature = { version = "2.2", default-features = false }
codec = { workspace = true, features = ["derive"] }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-identity-registry/std",
    "pallet-zk-credentials/std",
    "sp-trie/std",
    "sp-state-machine/std",
    "trie-db/std",
    "hash-db/std",
    "memory-db/std",
    "log/std",
    "p256/std",
    "p384/std",
    "signature/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]